Actions: add push changes step

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,3 +30,6 @@ jobs:
         run: vsce publish patch -p $VSCE_TOKEN
         env:
           VSCE_TOKEN: ${{ secrets.VSCE_TOKEN }}
+
+      - name: Push changes
+        run: git push https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
