--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install -g @vscode/vsce
 
       - name: install dependencies
-        run: npm install
+        run: npm ci
 
       - name: Set git identity
         run: |
